--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,23 +91,23 @@
     "            # pick random image from folder\n",
     "            # check to see if the image exists and can be loaded, if not move to another random image\n",
     "            while True:\n",
-    "                random_image = random.choice(name_list) # note that processed images are all .png type, while patient_table has different types\n",
+    "                random_image = random.choice(name_list) + '.jpeg' # note that processed images are all .png type, while patient_table has different types\n",
     "                if random_image in os.listdir(self.image_dir):\n",
     "                    break\n",
     "                else:\n",
     "                    print('attempted to get following image, but missing: ' + random_image)\n",
     "\n",
     "            while True:\n",
-    "                paired_image = random.choice(name_list) # note that processed images are all .png type, while patient_table has different types\n",
+    "                paired_image = random.choice(name_list) + '.jpeg' # note that processed images are all .png type, while patient_table has different types\n",
     "                if paired_image in os.listdir(self.image_dir):\n",
     "                    break\n",
     "                else:\n",
     "                    print('attempted to get following image, but missing: ' + random_image)\n",
     "\n",
     "            # get labels and meta data\n",
-    "            plus_disease_0 = random_image.split('-')[-2]\n",
-    "            plus_disease_1 = paired_image.split('-')[-2]\n",
-    "\n",
+    "            plus_disease_0 = self.patient_table.loc[self.patient_table['image'] == random_image[:-5], 'level'].values[0]\n",
+    "            plus_disease_1 = self.patient_table.loc[self.patient_table['image'] == paired_image[:-5], 'level'].values[0]\n",
+    " \n",
     "            if plus_disease_0 == plus_disease_1:\n",
     "                plus_disease_binary_change = 0 # 0 for no change\n",
     "            else:\n",
@@ -122,23 +122,23 @@
     "            # pick random image from folder\n",
     "            # check to see if the image exists and can be loaded, if not move to another random image\n",
     "            while True:\n",
-    "                random_image = random.choice(name_list) # note that processed images are all .png type, while patient_table has different types\n",
+    "                random_image = random.choice(name_list) + '.jpeg' # note that processed images are all .png type, while patient_table has different types\n",
     "                if random_image in os.listdir(self.image_dir):\n",
     "                    break\n",
     "                else:\n",
     "                    print('attempted to get following image, but missing: ' + random_image)\n",
     "\n",
     "            while True:\n",
-    "                paired_image = random.choice(name_list) # note that processed images are all .png type, while patient_table has different types\n",
+    "                paired_image = random.choice(name_list) + '.jpeg' # note that processed images are all .png type, while patient_table has different types\n",
     "                if paired_image in os.listdir(self.image_dir):\n",
     "                    break\n",
     "                else:\n",
     "                    print('attempted to get following image, but missing: ' + random_image)\n",
     "\n",
-    "            # get labels and meta data\n",
-    "            plus_disease_0 = random_image.split('-')[-2]\n",
-    "            plus_disease_1 = paired_image.split('-')[-2]\n",
-    "\n",
+    "            # get levels and meta data\n",
+    "            plus_disease_0 = self.patient_table.loc[self.patient_table['image'] == random_image[:-5], 'level'].values[0]\n",
+    "            plus_disease_1 = self.patient_table.loc[self.patient_table['image'] == paired_image[:-5], 'level'].values[0]\n",
+    " \n",
     "            if plus_disease_0 == plus_disease_1:\n",
     "                plus_disease_binary_change = 0 # 0 for no change\n",
     "            else:\n",
@@ -149,13 +149,13 @@
     "\n",
     "        # convert disease severity class labels to numeric form    \n",
     " \n",
-    "        if plus_disease_0 == 'NRG': pd0 = 0\n",
-    "        if plus_disease_0 == 'RG': pd0 = 1\n",
+    "        # if plus_disease_0 == 'NRG': pd0 = 0\n",
+    "        # if plus_disease_0 == 'RG': pd0 = 1\n",
     "\n",
-    "        if plus_disease_1 == 'NRG': pd1 = 0\n",
-    "        if plus_disease_1 == 'RG': pd1 = 1\n",
+    "        # if plus_disease_1 == 'NRG': pd1 = 0\n",
+    "        # if plus_disease_1 == 'RG': pd1 = 1\n",
     "\n",
-    "        plus_disease_change = pd1 - pd0 # should range from -1 to +1\n",
+    "        plus_disease_change = plus_disease_1 - plus_disease_0 # should range from -1 to +1\n",
     "\n",
     "        if plus_disease_change == 0:\n",
     "            plus_disease_binary_change = 0\n",
@@ -163,19 +163,19 @@
     "            plus_disease_binary_change = 1\n",
     "\n",
     "        # should be same patient ID and eye for both time points\n",
-    "        subject_id_0 = random_image.split('-')[-1][:-4]\n",
-    "        subject_id_1 = paired_image.split('-')[-1][:-4]\n",
-    "#         eye_0 = random_image.split('_')[4]\n",
-    "#         eye_1 = paired_image.split('_')[4]\n",
+    "        subject_id_0 = random_image.split('_')[0]\n",
+    "        subject_id_1 = paired_image.split('_')[0]\n",
+    "        eye_0 = random_image.split('_')[1]\n",
+    "        eye_1 = paired_image.split('_')[1]\n",
     " \n",
     "        label = plus_disease_binary_change # 0 for no change, 1 for change\n",
     " \n",
     "        meta = {\"subject_id_0\": subject_id_0,\n",
     "                \"subject_id_1\": subject_id_1,\n",
-    "#                 \"eye_0\": eye_0, \n",
-    "#                 \"eye_1\": eye_1, \n",
-    "                \"plus_disease_0\": pd0,\n",
-    "                \"plus_disease_1\": pd1,\n",
+    "                \"eye_0\": eye_0, \n",
+    "                \"eye_1\": eye_1, \n",
+    "                \"plus_disease_0\": plus_disease_0,\n",
+    "                \"plus_disease_1\": plus_disease_1,\n",
     "                \"plus_disease_change\": plus_disease_change,\n",
     "               }\n",
     "     \n",
@@ -190,7 +190,38 @@
     "            img1 = self.transform(img1) \n",
     "\n",
     "        return img0, img1, label, meta\n",
-    "       "
+    "              "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# processed image directory\n",
+    "image_dir = TRAIN_DATA_FOLDER\n",
+    "\n",
+    "# TRAINING DATA - INTER-patient image pairs BUT not limited to a single time point\n",
+    "\n",
+    "training_transforms = transforms.Compose([\n",
+    "    transforms.RandomHorizontalFlip(p=0.5), # aim to train to be invariant to laterality of eye\n",
+    "    transforms.RandomRotation(10), # rotate +/- 5 degrees around center\n",
+    "    transforms.RandomCrop(224), # pixel crop \n",
+    "    transforms.ColorJitter(brightness = 0.03, contrast = 0.03), # brightness and color variation of +/- 5%\n",
+    "    transforms.ToTensor()\n",
+    "])\n",
+    "\n",
+    "# note dataset v5 for inter-patient 50:50 comparisons\n",
+    "training_siamese_dataset = ROP_dataset_v5(patient_table = training_table, \n",
+    "                                        image_dir = image_dir, \n",
+    "                                        epoch_size = 3200,\n",
+    "                                        transform = training_transforms)\n",
+    "\n",
+    "training_dataloader = torch.utils.data.DataLoader(training_siamese_dataset, \n",
+    "                                                  batch_size=16, \n",
+    "                                                  shuffle=False, \n",
+    "                                                  num_workers=0)\n"
    ]
   },
   {
@@ -203,7 +234,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -217,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
