--- a/test.ipynb
+++ b/test.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "OUTPUT_FOLDER = \"/scratch/aakash_ks.iitr\"\n",
+    "OUTPUT_FOLDER = \"/scratch/aakash_ks.iitr/dr-scnn/\"\n",
     "DATA_FOLDER = \"/scratch/aakash_ks.iitr/data/diabetic-retinopathy/\"\n",
     "TRAIN_DATA_FOLDER = DATA_FOLDER + 'resized_train/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,192 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# annotations\n",
-    "training_table = pd.read_csv(os.path.join(DATA_FOLDER, 'trainLabels.csv'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ROP_dataset_v5(data.Dataset):\n",
-    "    \"\"\" \n",
-    "    Create dataset representation of ROP data \n",
-    "    - This class returns image pairs with a change label (i.e. change vs no change in a categorical disease severity label) and other metadata\n",
-    "    - Image pairs are sampled so that there are an equal number of change vs no change labels\n",
-    "    - Epoch size can be set for empirical testing\n",
-    "  \n",
-    "    Concepts adapted from: \n",
-    "    - https://hackernoon.com/facial-similarity-with-siamese-networks-in-pytorch-9642aa9db2f7\n",
-    "    - https://pytorch.org/tutorials/beginner/data_loading_tutorial.html\n",
-    "    \"\"\"  \n",
-    "    def __init__(self, patient_table, image_dir, epoch_size, transform=None):\n",
-    "        \"\"\"\n",
-    "        Args:\n",
-    "            patient_table (pd.dataframe): dataframe table containing image names, disease severity category label, and other metadata\n",
-    "            image_dir (string): directory containing all of the image files\n",
-    "            transform (callable, optional): optional transform to be applied on a sample\n",
-    "        \"\"\"\n",
-    "        self.patient_table = patient_table\n",
-    "        self.image_dir = image_dir \n",
-    "        self.transform = transform\n",
-    "        self.epoch_size = epoch_size \n",
-    "        if self.transform is None:\n",
-    "            self.transform = transforms.Compose([transforms.ToTensor()])\n",
-    " \n",
-    "    def __len__(self):\n",
-    "        return self.epoch_size\n",
-    " \n",
-    "    def __getitem__(self, idx):\n",
-    "        \n",
-    "        name_list = list(self.patient_table['image'])\n",
-    "\n",
-    "        # goal is 50:50 distribution of change vs no change\n",
-    "        change_binary = random.randint(0,1) \n",
-    "\n",
-    "        # keep on looping until no change pair created\n",
-    "        while change_binary == 0:\n",
-    "\n",
-    "            # pick random image from folder\n",
-    "            # check to see if the image exists and can be loaded, if not move to another random image\n",
-    "            while True:\n",
-    "                random_image = random.choice(name_list) + '.jpeg' # note that processed images are all .png type, while patient_table has different types\n",
-    "                if random_image in os.listdir(self.image_dir):\n",
-    "                    break\n",
-    "                else:\n",
-    "                    print('attempted to get following image, but missing: ' + random_image)\n",
-    "\n",
-    "            while True:\n",
-    "                paired_image = random.choice(name_list) + '.jpeg' # note that processed images are all .png type, while patient_table has different types\n",
-    "                if paired_image in os.listdir(self.image_dir):\n",
-    "                    break\n",
-    "                else:\n",
-    "                    print('attempted to get following image, but missing: ' + random_image)\n",
-    "\n",
-    "            # get labels and meta data\n",
-    "            plus_disease_0 = self.patient_table.loc[self.patient_table['image'] == random_image[:-5], 'level'].values[0]\n",
-    "            plus_disease_1 = self.patient_table.loc[self.patient_table['image'] == paired_image[:-5], 'level'].values[0]\n",
-    " \n",
-    "            if plus_disease_0 == plus_disease_1:\n",
-    "                plus_disease_binary_change = 0 # 0 for no change\n",
-    "            else:\n",
-    "                plus_disease_binary_change = 1 # 1 for change\n",
-    "\n",
-    "            if plus_disease_binary_change == change_binary:\n",
-    "                break\n",
-    "  \n",
-    "        # keep on looping until change pair created\n",
-    "        while change_binary == 1:\n",
-    "        \n",
-    "            # pick random image from folder\n",
-    "            # check to see if the image exists and can be loaded, if not move to another random image\n",
-    "            while True:\n",
-    "                random_image = random.choice(name_list) + '.jpeg' # note that processed images are all .png type, while patient_table has different types\n",
-    "                if random_image in os.listdir(self.image_dir):\n",
-    "                    break\n",
-    "                else:\n",
-    "                    print('attempted to get following image, but missing: ' + random_image)\n",
-    "\n",
-    "            while True:\n",
-    "                paired_image = random.choice(name_list) + '.jpeg' # note that processed images are all .png type, while patient_table has different types\n",
-    "                if paired_image in os.listdir(self.image_dir):\n",
-    "                    break\n",
-    "                else:\n",
-    "                    print('attempted to get following image, but missing: ' + random_image)\n",
-    "\n",
-    "            # get levels and meta data\n",
-    "            plus_disease_0 = self.patient_table.loc[self.patient_table['image'] == random_image[:-5], 'level'].values[0]\n",
-    "            plus_disease_1 = self.patient_table.loc[self.patient_table['image'] == paired_image[:-5], 'level'].values[0]\n",
-    " \n",
-    "            if plus_disease_0 == plus_disease_1:\n",
-    "                plus_disease_binary_change = 0 # 0 for no change\n",
-    "            else:\n",
-    "                plus_disease_binary_change = 1 # 1 for change\n",
-    "\n",
-    "            if plus_disease_binary_change == change_binary:\n",
-    "                break\n",
-    "\n",
-    "        # convert disease severity class labels to numeric form    \n",
-    " \n",
-    "        # if plus_disease_0 == 'NRG': pd0 = 0\n",
-    "        # if plus_disease_0 == 'RG': pd0 = 1\n",
-    "\n",
-    "        # if plus_disease_1 == 'NRG': pd1 = 0\n",
-    "        # if plus_disease_1 == 'RG': pd1 = 1\n",
-    "\n",
-    "        plus_disease_change = plus_disease_1 - plus_disease_0 # should range from -1 to +1\n",
-    "\n",
-    "        if plus_disease_change == 0:\n",
-    "            plus_disease_binary_change = 0\n",
-    "        else:\n",
-    "            plus_disease_binary_change = 1\n",
-    "\n",
-    "        # should be same patient ID and eye for both time points\n",
-    "        subject_id_0 = random_image.split('_')[0]\n",
-    "        subject_id_1 = paired_image.split('_')[0]\n",
-    "        eye_0 = random_image.split('_')[1]\n",
-    "        eye_1 = paired_image.split('_')[1]\n",
-    " \n",
-    "        label = plus_disease_binary_change # 0 for no change, 1 for change\n",
-    " \n",
-    "        meta = {\"subject_id_0\": subject_id_0,\n",
-    "                \"subject_id_1\": subject_id_1,\n",
-    "                \"eye_0\": eye_0, \n",
-    "                \"eye_1\": eye_1, \n",
-    "                \"plus_disease_0\": plus_disease_0,\n",
-    "                \"plus_disease_1\": plus_disease_1,\n",
-    "                \"plus_disease_change\": plus_disease_change,\n",
-    "               }\n",
-    "     \n",
-    "        # open images and convert to single channel (greyscale from RGB) - note already 8bit images\n",
-    "        img0 = Image.open(self.image_dir + random_image)\n",
-    "        img1 = Image.open(self.image_dir + paired_image)\n",
-    "        img0 = img0.convert(\"L\")\n",
-    "        img1 = img1.convert(\"L\")\n",
-    "\n",
-    "        if self.transform is not None:\n",
-    "            img0 = self.transform(img0)\n",
-    "            img1 = self.transform(img1) \n",
-    "\n",
-    "        return img0, img1, label, meta\n",
-    "              "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# processed image directory\n",
-    "image_dir = TRAIN_DATA_FOLDER\n",
-    "\n",
-    "# TRAINING DATA - INTER-patient image pairs BUT not limited to a single time point\n",
-    "\n",
-    "training_transforms = transforms.Compose([\n",
-    "    transforms.RandomHorizontalFlip(p=0.5), # aim to train to be invariant to laterality of eye\n",
-    "    transforms.RandomRotation(10), # rotate +/- 5 degrees around center\n",
-    "    transforms.RandomCrop(224), # pixel crop \n",
-    "    transforms.ColorJitter(brightness = 0.03, contrast = 0.03), # brightness and color variation of +/- 5%\n",
-    "    transforms.ToTensor()\n",
-    "])\n",
-    "\n",
-    "# note dataset v5 for inter-patient 50:50 comparisons\n",
-    "training_siamese_dataset = ROP_dataset_v5(patient_table = training_table, \n",
-    "                                        image_dir = image_dir, \n",
-    "                                        epoch_size = 3200,\n",
-    "                                        transform = training_transforms)\n",
-    "\n",
-    "training_dataloader = torch.utils.data.DataLoader(training_siamese_dataset, \n",
-    "                                                  batch_size=16, \n",
-    "                                                  shuffle=False, \n",
-    "                                                  num_workers=0)\n"
+    "train_data = pd.read_csv(os.path.join(DATA_FOLDER, 'trainLabels.csv'))"
    ]
   },
   {
@@ -237,10 +56,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.11.7"
   }
  },
  "nbformat": 4,
