--- a/output/o3.ipynb
+++ b/output/o3.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4646457d",
+   "metadata": {
+    "tags": [
+     "papermill-error-cell-tag"
+    ]
+   },
+   "source": [
+    "<span style=\"color:red; font-family:Helvetica Neue, Helvetica, Arial, sans-serif; font-size:2em;\">An Exception was encountered at '<a href=\"#papermill-error-cell\">In [23]</a>'.</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5c3a8d6b",
    "metadata": {
     "id": "JC-p4CpT1_Lc",
@@ -1196,30 +1208,194 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1d635bb2",
+   "metadata": {
+    "tags": [
+     "papermill-error-cell-tag"
+    ]
+   },
+   "source": [
+    "<span id=\"papermill-error-cell\" style=\"color:red; font-family:Helvetica Neue, Helvetica, Arial, sans-serif; font-size:2em;\">Execution using papermill encountered an exception here and stopped:</span>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "7b769235",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T16:21:40.983908Z",
-     "iopub.status.busy": "2024-04-14T16:21:40.983523Z",
-     "iopub.status.idle": "2024-04-14T16:21:48.524465Z",
-     "shell.execute_reply": "2024-04-14T16:21:48.523002Z",
-     "shell.execute_reply.started": "2024-04-14T16:21:40.983878Z"
+     "iopub.execute_input": "2024-05-12T01:10:11.774954Z",
+     "iopub.status.busy": "2024-05-12T01:10:11.774408Z",
+     "iopub.status.idle": "2024-05-12T01:11:51.012597Z",
+     "shell.execute_reply": "2024-05-12T01:11:51.011755Z"
     },
     "id": "7CFfmp3CxDG5",
     "outputId": "952103d3-bbd9-449f-e9cf-26d5c2608aea",
     "papermill": {
-     "duration": null,
-     "end_time": null,
-     "exception": false,
+     "duration": 99.248468,
+     "end_time": "2024-05-12T01:11:51.014736",
+     "exception": true,
      "start_time": "2024-05-12T01:10:11.766268",
-     "status": "running"
+     "status": "failed"
     },
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model parameters: 23_508_032\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|                                                                               | 0/6 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch 0 training 1/6 [LR 0.000100] - loss: 9.4857:   0%|                            | 0/6 [00:50<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch 0 training 1/6 [LR 0.000100] - loss: 9.4857:  17%|███▎                | 1/6 [00:50<04:10, 50.03s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch 0 training 2/6 [LR 0.000099] - loss: 8.9171:  17%|███▎                | 1/6 [00:50<04:10, 50.03s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch 0 training 2/6 [LR 0.000099] - loss: 8.9171:  33%|██████▋             | 2/6 [00:50<01:22, 20.66s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch 0 training 3/6 [LR 0.000098] - loss: 8.5317:  33%|██████▋             | 2/6 [00:50<01:22, 20.66s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch 0 training 3/6 [LR 0.000098] - loss: 8.5317:  50%|██████████          | 3/6 [00:50<00:33, 11.27s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch 0 training 4/6 [LR 0.000096] - loss: 8.2253:  50%|██████████          | 3/6 [00:50<00:33, 11.27s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch 0 training 5/6 [LR 0.000093] - loss: 7.9179:  50%|██████████          | 3/6 [00:50<00:33, 11.27s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch 0 training 5/6 [LR 0.000093] - loss: 7.9179:  83%|████████████████▋   | 5/6 [00:50<00:04,  4.95s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch 0 training 6/6 [LR 0.000091] - loss: 7.7358:  83%|████████████████▋   | 5/6 [00:50<00:04,  4.95s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch 0 training 6/6 [LR 0.000091] - loss: 7.7358: 100%|████████████████████| 6/6 [00:50<00:00,  8.44s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0 train loss = 7.7358, auc = 1.0000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|                                                                               | 0/2 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|                                                                               | 0/2 [00:43<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'logits' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 65\u001b[0m\n\u001b[1;32m     62\u001b[0m train_score_history\u001b[38;5;241m.\u001b[39mappend(train_auc)\n\u001b[1;32m     63\u001b[0m learning_rate_history\u001b[38;5;241m.\u001b[39mextend(train_lr)\n\u001b[0;32m---> 65\u001b[0m val_loss, val_auc \u001b[38;5;241m=\u001b[39m evaluate_model(CFG, model, valid_loader, loss_criterion, epoch)\n\u001b[1;32m     66\u001b[0m val_loss_history\u001b[38;5;241m.\u001b[39mappend(val_loss)\n\u001b[1;32m     67\u001b[0m val_score_history\u001b[38;5;241m.\u001b[39mappend(val_auc)\n",
+      "Cell \u001b[0;32mIn[17], line 27\u001b[0m, in \u001b[0;36mevaluate_model\u001b[0;34m(cfg, model, data_loader, loss_criterion, epoch)\u001b[0m\n\u001b[1;32m     25\u001b[0m     targets\u001b[38;5;241m.\u001b[39mappend(target\u001b[38;5;241m.\u001b[39mdetach()\u001b[38;5;241m.\u001b[39mcpu())\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;66;03m# predictions.append(logits.detach().cpu())\u001b[39;00m\n\u001b[0;32m---> 27\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m images, target, logits\n\u001b[1;32m     29\u001b[0m targets \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat(targets, dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# predictions = torch.cat(predictions, dim=0)\u001b[39;00m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# predictions = F.sigmoid(predictions)\u001b[39;00m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: cannot access local variable 'logits' where it is not associated with a value"
+     ]
+    }
+   ],
    "source": [
     "for FOLD in CFG.train_folds:\n",
     "\n",
@@ -1394,12 +1570,24 @@
    "language": "python",
    "name": "python3"
   },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
+  },
   "papermill": {
    "default_parameters": {},
-   "duration": null,
-   "end_time": null,
+   "duration": 116.762383,
+   "end_time": "2024-05-12T01:11:53.896993",
    "environment_variables": {},
-   "exception": null,
+   "exception": true,
    "input_path": "model_contrastive.ipynb",
    "output_path": "output/o3.ipynb",
    "parameters": {},
