--- a/image_retrieval.ipynb
+++ b/image_retrieval.ipynb
@@ -366,6 +366,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "note that the severity levels in test / query images are 0, 1, 2, 3 ie only 4 levels."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
@@ -422,6 +429,7 @@
     }
    ],
    "source": [
+    "# query image\n",
     "# apply the same transformation to the test image\n",
     "transformed_img = transform(image)\n",
     "transformed_img_pil = func.to_pil_image(transformed_img)\n",
