--- a/image_retrieval.ipynb
+++ b/image_retrieval.ipynb
@@ -399,7 +399,7 @@
    "outputs": [],
    "source": [
     "# taking a random image from the test folder\n",
-    "image = Image.open(TEST_DATA_FOLDER + '/DR2/1ffa93c6-8d87-11e8-9daf-6045cb817f5b..JPG')"
+    "query_img = Image.open(TEST_DATA_FOLDER + '/DR2/1ffa93c6-8d87-11e8-9daf-6045cb817f5b..JPG')"
    ]
   },
   {
@@ -431,9 +431,21 @@
    "source": [
     "# query image\n",
     "# apply the same transformation to the test image\n",
-    "transformed_img = transform(image)\n",
-    "transformed_img_pil = func.to_pil_image(transformed_img)\n",
+    "transformed_query_img = transform(query_img)\n",
+    "transformed_img_pil = func.to_pil_image(transformed_query_img)\n",
     "plt.imshow(transformed_img_pil)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load model\n",
+    "model = torch.load(OUTPUT_FOLDER + 'best_model_fold_0.pth').to(device)\n",
+    "model.eval()\n",
+    "dataloader = DataLoader(train_dataset, batch_size=1, shuffle=False, num_workers=CFG.workers)"
    ]
   },
   {
@@ -442,8 +454,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load model\n",
-    "model = torch.load(OUTPUT_FOLDER + 'model.pth')"
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "\n",
+    "# Function to get embeddings from a model\n",
+    "def get_embeddings(dataloader, model):\n",
+    "    with torch.no_grad():\n",
+    "        embeddings = []\n",
+    "        for images, _ in dataloader:\n",
+    "            images = images.to(device)\n",
+    "            output = model(images)\n",
+    "            embeddings.append(output.cpu().numpy())\n",
+    "        embeddings = np.vstack(embeddings)\n",
+    "    return embeddings\n",
+    "\n",
+    "# Get embeddings for all images\n",
+    "all_embeddings = get_embeddings(dataloader, model)\n",
+    "\n",
+    "# Query image (assuming it is loaded and transformed similarly)\n",
+    "query_image = transform(query_img).unsqueeze(0).to(device)  # Unsqueeze to add the batch dimension\n",
+    "query_embedding = model(query_image).cpu().numpy()\n",
+    "\n",
+    "# Find the k nearest images\n",
+    "k = 5\n",
+    "nbrs = NearestNeighbors(n_neighbors=k, algorithm='ball_tree').fit(all_embeddings)\n",
+    "distances, indices = nbrs.kneighbors(query_embedding)\n",
+    "\n",
+    "# Resulting indices are the indices of the closest images in your dataset\n",
+    "print(\"Indices of nearest images:\", indices)\n",
+    "print(\"Distances:\", distances)"
    ]
   }
  ],
@@ -452,6 +490,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
