--- a/image_retrieval.ipynb
+++ b/image_retrieval.ipynb
@@ -443,7 +443,7 @@
    "outputs": [],
    "source": [
     "# load model\n",
-    "model = torch.load(OUTPUT_FOLDER + 'best_model_fold_0.pth').to(device)\n",
+    "model = torch.load(OUTPUT_FOLDER + 'best_model_fold_0.pth', map_location=device)\n",
     "model.eval()\n",
     "dataloader = DataLoader(train_dataset, batch_size=1, shuffle=False, num_workers=CFG.workers)"
    ]
@@ -490,18 +490,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.9"
   }
  },
  "nbformat": 4,
