--- a/image_retrieval.ipynb
+++ b/image_retrieval.ipynb
@@ -443,8 +443,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torchvision import models\n",
-    "\n",
     "# load model\n",
     "model = timm.create_model(CFG.model_name, num_classes=5, checkpoint_path=OUTPUT_FOLDER + 'best_model_fold_0.pth')\n",
     "dataloader = DataLoader(train_dataset, batch_size=1, shuffle=False, num_workers=CFG.workers)\n",
@@ -535,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -573,9 +571,72 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1ffa9657-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9643-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9656-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9634-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa963a-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9633-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa962f-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9659-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9627-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9641-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa962a-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa962b-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa962d-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa963f-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9630-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9642-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa965b-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9652-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9638-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9629-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9636-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9639-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa964c-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa965a-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa964a-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9632-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9654-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9628-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9640-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9644-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9647-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa964b-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa962e-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9651-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9631-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9655-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9649-8d87-11e8-9daf-6045cb817f5b..JPG',\n",
+       " '1ffa9658-8d87-11e8-9daf-6045cb817f5b..JPG']"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir(TEST_DATA_FOLDER + 'Normal/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# open 5 normal images and 5 severe images\n",
+    "\n",
+    "normal_images = map(lambda x: Image.open(TEST_FOLDER + 'Normal/' + x), np.choice(os.listdir(TEST_FOLDER + 'Normal/')))"
+   ]
   }
  ],
  "metadata": {
