--- a/scl.ipynb
+++ b/scl.ipynb
@@ -1210,7 +1210,7 @@
     "    train_loss, train_lr = train_epoch(CFG, train_loader, model, criterion, device, optimizer, scheduler, epoch)\n",
     "    scheduler.step()  # Update the learning rate scheduler at the end of each epoch\n",
     "\n",
-    "    if epoch % 2 == 0:\n",
+    "    if (epoch+1) % 2 == 0:\n",
     "        torch.save(model.state_dict(), os.path.join(wandb.run.dir, f'ckpt_epoch_{epoch}.pth'))\n",
     "\n",
     "        # plot a tsne plot of all the images using embeddings from the model\n",
