--- a/scl.ipynb
+++ b/scl.ipynb
@@ -171,7 +171,7 @@
     "    workers = 16\n",
     "\n",
     "    model_name = \"resnet50.a1_in1k\"\n",
-    "    epochs = 10\n",
+    "    epochs = 15\n",
     "    cropped = True\n",
     "    # weights =  torch.tensor([0.206119, 0.793881],dtype=torch.float32)\n",
     "\n",
@@ -179,7 +179,7 @@
     "    batch_size = 50\n",
     "    # gradient_accumulation_steps = 1\n",
     "\n",
-    "    lr = 1e-2\n",
+    "    lr = 2e-3\n",
     "    weight_decay=1e-2\n",
     "    \n",
     "    resolution = 224\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "17674522",
    "metadata": {},
    "outputs": [],
@@ -1128,15 +1128,16 @@
     "    # Create a boundary norm with boundaries and colors\n",
     "    norm = mcolors.BoundaryNorm(np.arange(-0.5, num_classes + 0.5, 1), cmap.N)\n",
     "\n",
-    "    plt.figure(figsize=(10, 8))\n",
-    "    scatter = plt.scatter(tsne_results[:, 0], tsne_results[:, 1], c=labels, cmap=cmap, norm=norm, alpha=0.7)\n",
+    "    fig = plt.figure(figsize=(10, 8))\n",
+    "    scatter = plt.scatter(tsne_results[:, 0], tsne_results[:, 1], c=labels, cmap=cmap, norm=norm, alpha=0.5)\n",
     "    colorbar = plt.colorbar(scatter, ticks=np.arange(num_classes))\n",
     "    colorbar.set_label('Severity Level')\n",
     "    colorbar.set_ticklabels(np.arange(num_classes))  # Set discrete labels if needed\n",
     "    plt.title('t-SNE of Image Embeddings with Discrete Severity Levels')\n",
     "    plt.xlabel('t-SNE Axis 1')\n",
     "    plt.ylabel('t-SNE Axis 2')\n",
-    "    wandb.log({\"t-SNE\": plt})\n",
+    "    fg = wandb.Image(fig)\n",
+    "    wandb.log({\"t-SNE\": fg})\n",
     "    plt.savefig(os.path.join(wandb.run.dir, name), dpi=300, bbox_inches='tight')\n"
    ]
   },
@@ -1210,7 +1211,7 @@
     "    train_loss, train_lr = train_epoch(CFG, train_loader, model, criterion, device, optimizer, scheduler, epoch)\n",
     "    scheduler.step()  # Update the learning rate scheduler at the end of each epoch\n",
     "\n",
-    "    if (epoch+1) % 2 == 0:\n",
+    "    if (epoch+1) % 1 == 0:\n",
     "        torch.save(model.state_dict(), os.path.join(wandb.run.dir, f'ckpt_epoch_{epoch}.pth'))\n",
     "\n",
     "        # plot a tsne plot of all the images using embeddings from the model\n",
@@ -1278,6 +1279,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   },
   "papermill": {
    "default_parameters": {},
