--- a/scl.ipynb
+++ b/scl.ipynb
@@ -183,10 +183,10 @@
     "    weight_decay=1e-2\n",
     "    \n",
     "    resolution = 224\n",
-    "    samples_per_class = 1500\n",
+    "    samples_per_class = 1000\n",
     "    frozen_layers = 0\n",
     "    \n",
-    "    cl_method = 'SupCon'"
+    "    cl_method = 'SimCLR'"
    ]
   },
   {
